--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -3,7 +3,7 @@
 ## namespace *using* declarations (3.1)
 
 ### new core ideas
-- the scope operator :: says that the compiler should look in the scope (namespace) of the left-hand operand for the name of the right-hand operatand
+- the **scope operator ::** says that the compiler should look in the scope (namespace) of the left-hand operand for the name of the right-hand operatand
 - a ***using*** declaration lets us use a name from a namespace without qualifying the name with *(namespace)::* prefix
 	- a separate *using* declaration is required for each name
 
@@ -53,7 +53,7 @@ is >> s // reads whitespace-separated string from is into s, returns is
 getline(is, s) // reads a line of input from is into s (not including the newline), returns is.
 s.empty() // returns true if s is empty, otherwise returns false
 s.size() // returns the (unsigned size_type) number of characters in s
-s[n] // returns a reference to the char at position n in s.
+s[n] // returns a reference to the char at position (unsigned size_type) n in s.
 s1 + s2 // returns a string that is the concatenation of s1 and s2
 s1 = s2 // replaces characters in s1 with a copy of s2
 
@@ -68,18 +68,49 @@ s1 == s2 // !=, <, <=, >, >=
 	- at least one operand to each + operator must be of *string* type.
 	- **string literals are not of type *string* from the C++ standard library.**
 ~~~
+// examples of legal and illegal concatenation
 string s4 = s1 + ", " + s2 + '\n'; // ok
 string s5 = "hello" + ", " + s2; // error: no string operand for first + operator
 string s6 = s1 + ", " + "world"; // ok, right equivalent to (s1 + ", ") + "world"
 ~~~
 
-- processing a string
+- analyzing the characters in a string
 	- *cctype* library has functions for interpreting characters and changing characteristics like upper/lowercase
-	- **range-based *for* ** is good for processing every character in a string.
+	- **range-based *for* loop** is good for processing every character in a string. (C++11)
+		- the *auto* type specifier is useful here.
+~~~
+// example of using range for and the cctype library function ispunct
+string s("hello world!!!");
+decltype(s.size()) punct_cnt = 0;
+for (auto c : s) {
+	if (ispunct(c))
+		++punct_cnt;
+}
+cout << punct_cnt << '\n';
+~~~
+
+- changing the characters in a non*const* string
+	- **to change the value of the characters in string, we must define the loop variable as a reference type.**
+~~~
+// example of changing the characters in a string by reference
+string s("hello world!!!");
+for (auto &c : s)
+	c = toupper(c); // cctype function returns uppercase version of argument
+cout << punct_cnt << '\n';
+~~~
+
+- the **subscript operator [ ]** takes a *string::size_type* (unsigned) value that denotes the zero-indexed position of the character we want to access and returns a reference to that character.
+	- **the result of using an index out of range is undefined.**
+		- **valid range is >=0 && < size()**
+		- **subscripting an empty string is undefined.**
+	- **any time we use a subscript, we must ensure that there is a value at the given location.**
+		- in this use case, we would check that the string isn't empty before using the [ ] operator.
+
+
 
 ### misc conventions and tips
 - direct initialize is preferred when initializing objects with multiple values (parameters?)
-- **don't use signed *int*s in expressions that use *size()*.**
+- **don't use signed *int*s in subscript operators *[ ]* or expressions that use *size()*.**
 	- size() returns a *string::size_type* value.
 	- use auto to get the type if necessary, but remember it's unsigned!
 - the C++ library incorporates the C library. the C++ version of C library headers are c*name* (remove the .h suffix and precede the name with the letter 'c').
@@ -89,3 +120,4 @@ string s6 = s1 + ", " + "world"; // ok, right equivalent to (s1 + ", ") + "world
 
 
 ## things to follow up on
+- my program compiles and runs without the #include directive for cctype. is it necessary/good practice to include it anyways?
