--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -116,6 +116,7 @@ cout << punct_cnt << '\n';
 - the C++ library incorporates the C library. the C++ version of C library headers are c*name* (remove the .h suffix and precede the name with the letter 'c').
 	- when we include *cctype*, we are actually including the C++ version of the C library header *ctype.h*. 
 	- using the c*name* form in C++ lets us access the C library header's namespace through *std*.
+- [**general summary of how to declare types in ranged for loops**](https://stackoverflow.com/questions/15176104/c11-range-based-loop-get-item-by-value-or-reference-to-const)
 
 
 
