--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -95,11 +95,11 @@ int i = 1024, *p = &i, &r = i;
 ~~~
 
 - an **lvalue reference** (signified by a *declarator* with the *&* type modifier) refers to (is another name for) its initializer.
-	- refers to a single object (its initializer) throughout its lifetime.
-	- references are not objects themselves.
+	- **refers to a single object (its initializer) throughout its lifetime.**
+	- **references are not objects themselves.**
 - a **pointer** (signified by a *declarator* with the * type modifier) points to another type.
-	- unlike a reference, a pointer is an object in its own right.
-	- a pointer holds the address of another object.
+	- **a pointer is an object in its own right**, unlike a reference.
+	- **a pointer holds the address of another object.**
 		- **address-of operator &**
 	- the **dereference operator &ast;** yields the object that a pointer points to.
 		- can only be used on a valid pointer that points to an object.
