--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -28,18 +28,16 @@ int main() {
 ## library *string* type (3.2)
 
 ### new core ideas
-- forms of initialization
+- string initialization
 	- *default initialize* to empty string (covered before in ch2).
 	- *copy initialize* copies the initializer on the right-hand side of an = sign. this can be used with a single initializer.
 	- *direct initialize* omits the = sign and can be used with initializers that consist of more than one value.
 ~~~
-// ways to initialize a string
+// how i initialize a string (refer to Primer for complete list)
 string s1; // default initialization to the empty string
-string s2(s1); // s2 is a copy of s1, direct initialized
-string s2 = s1; // same as above, copy initialized
-string s3("value"); // s3 is a copy of the string literal, direct initialized
-string s3 = "value"; // same as above, copy initialized
-string s4(n, 'c'); // initialize s4 with n copies of the character 'c', direct initialized
+string s2 = s1; // s2 is a copy of s1 (copy initialized)
+string s3 = "value"; // s3 is a copy of the string literal (copy initialized)
+string s4(n, 'c'); // initialize s4 with n copies of the character 'c' (direct initialized)
 ~~~
 
 - **classes can define how objects are created/initialized, operations that are called by name, and what various operator symbols (<<, +, etc.) mean when applied to objects of the class' type.**
@@ -106,8 +104,6 @@ cout << punct_cnt << '\n';
 	- **any time we use a subscript, we must ensure that there is a value at the given location.**
 		- in this use case, we would check that the string isn't empty before using the [ ] operator.
 
-
-
 ### misc conventions and tips
 - direct initialize is preferred when initializing objects with multiple values (parameters?)
 - **don't use signed *int*s in subscript operators *[ ]* or expressions that use *size()*.**
@@ -118,6 +114,41 @@ cout << punct_cnt << '\n';
 	- using the c*name* form in C++ lets us access the C library header's namespace through *std*.
 - [**general summary of how to declare types in ranged for loops**](https://stackoverflow.com/questions/15176104/c11-range-based-loop-get-item-by-value-or-reference-to-const)
 
+
+## library *vector* type (3.3)
+
+### new core ideas
+- a ***vector*** is a *class template*
+	- templates are not themselves classes or functions.
+	- to specify which actual class to instantiate from a template, we supply additional information inside angle brackets following the template's name.
+- a vector is a container containing other objects all of the same type.
+	- we specify the type of the objects a vector will hold inside angle brackets.
+~~~
+vector<int> ivec; // ivec holds objects of type int
+vector<vector<string>> // vector whose elements are vectors containing strings
+~~~
+
+- vector initialization
+	- default initialize to an empty vector of the specified type.
+		- the most common way of using vector is to define an empty vector to which elements are added as their values become known at runtime.
+	- copy elements from another vector of the same type (using either direct or copy initialization like with strings)
+	- list initialize using { } curly braces (direct or copy initialization)
+	- direct initialize from a specified number of elements (with the option of providing a default initial value for all elements)
+~~~
+// how i initialize a vector (refer to Primer for complete list)
+vector <T> v1; // default initialize empty vector of type T
+vector<T> v2 = v1; // v2 has a copy of each element in v1
+vector<T> v3(n, val); // v3 has n elements each with value val
+vector<T> v4(n); // v4 has n elements each with type T's default-initializing value
+vector<T> v5 = {a, b, c} // v5 is list-initialized
+~~~
+
+
+### misc conventions and tips
+- [direct initializers are generally more permissible, but can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization)
+	- for now stick with copy initialization and only use direct initialization when necessary.
+- be careful about curly braces vs parentheses!
+	- also, if we use braces, but there is no way to use the initializers to list initialize the object, then those values will be used to construct the object (as if they were inside parentheses).
 
 
 ## things to follow up on
