--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -160,7 +160,7 @@ extern const int bufSize = fcn(); // defines and initializes a const that is acc
 extern const int bufSize; // same bufSize as defined in file_1.cc
 ~~~
 	
-uses of the const qualifier:
+**using the const qualifier with compound types:**
 
 ~~~
 int i = 42;
