--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -100,7 +100,7 @@ cout << punct_cnt << '\n';
 - the **subscript operator [ ]** takes a *string::size_type* (unsigned) value that denotes the zero-indexed position of the character we want to access and returns a reference to that character.
 	- **the result of using an index out of range is undefined.**
 		- **valid range is >=0 && < size()**
-		- **subscripting an empty string is undefined.**
+		- **subscripting an empty string is undefined!**
 	- **any time we use a subscript, we must ensure that there is a value at the given location.**
 		- in this use case, we would check that the string isn't empty before using the [ ] operator.
 
@@ -136,19 +136,31 @@ vector<vector<string>> // vector whose elements are vectors containing strings
 	- direct initialize from a specified number of elements (with the option of providing a default initial value for all elements)
 ~~~
 // how i initialize a vector (refer to Primer for complete list)
-vector <T> v1; // default initialize empty vector of type T
+vector<T> v1; // default initialize empty vector of type T
 vector<T> v2 = v1; // v2 has a copy of each element in v1
 vector<T> v3(n, val); // v3 has n elements each with value val
 vector<T> v4(n); // v4 has n elements each with type T's default-initializing value
-vector<T> v5 = {a, b, c} // v5 is list-initialized
+vector<T> v5 = {a, b, c}; // v5 is copy-list-initialized
 ~~~
 
+- operations with vector
+	- ***push_back*** takes a value and "pushes" it as a new last element onto the "back" of the vector (appends value to vector).
+		- **note that a range *for* loop must not change the size of the sequence over which it is iterating.**
+	- other operations on vector are similar to operations on string.
+		- in a range *for*, use reference to assign new values to the elements in a vector.
+		- **the *size()* operation and *subscript operator [ ]* use (unsigned) type *vector< T >::size_type*.**
+			- **remember to only subscript in range, otherwise behavior is undefined!**
+		- two vectors can be compared **if the element type can be compared**. 
+			- dictionary ordering like strings.
 
 ### misc conventions and tips
 - [direct initializers are generally more permissible, but can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization)
 	- for now stick with copy initialization and only use direct initialization when necessary.
 - be careful about curly braces vs parentheses!
 	- also, if we use braces, but there is no way to use the initializers to list initialize the object, then those values will be used to construct the object (as if they were inside parentheses).
+- vectors grow efficiently.
+	- recall amortization in cs61b!
+	- only specify number of elements / initial value when you want all or most elements to have that initial value.
 
 
 ## things to follow up on
