--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -160,7 +160,7 @@ extern const int bufSize = fcn(); // defines and initializes a const that is acc
 extern const int bufSize; // same bufSize as defined in file_1.cc
 ~~~
 	
-**using the const qualifier with compound types:**
+**using the *const* qualifier with compound types:**
 
 ~~~
 int i = 42;
@@ -199,13 +199,15 @@ const double *const pip = &pi; // const pointer to object of type const double
 		- low-level const is never ignored.
 		- when we copy an object, both objects must have the same low-level const qualification or there must be a conversion between the types of the two objects.
 	
-constant expressions (skimmed, refer to Primer for details)
+***constant expressions*** (also see ch6)
 
 - constant expressions are expressions whose values cannot change and that can be evaluated at compile time.
 	- can be a literal or a const object that is initialized from a constant expression.
-- we can ask the compiler to verify that a variable is a constant expression by using the ***constexpr*** keyword in its declaration. (C++11)
-	- can only use on literal types (arithmetic types, references, and pointers)
-	- imposes a top-level const, so order of declaration in some cases would look different from previous rules.
+	- we can have functions that are constant expressions (see ch6) and can be used as constant expression initializers.
+- we can ask the compiler to verify that an object's initializer is a constant expression by using the ***constexpr*** keyword in the object's declaration. (C++11)
+	- can only use for literal types (arithmetic types, references, and pointers).
+	- *constexpr* imposes a top-level const, so order of declaration in some compound-type cases would look different from previous rules.
+		- refer to Primer for details.
 
 ### misc conventions and tips
 - https://isocpp.org/wiki/faq/const-correctness
